--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ img {
     box-shadow: 10px 10px 5px #aaaaaa;
 }
 
-.characters {
+.characters, .userCharacter, .defender, .fight {
     background-color: rgba(214, 214, 214, 0.829);
     border-radius: 10px;
 }
